WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128197
WK: Cannot select text inside clickable containers.
https://bugs.webkit.org/show_bug.cgi?id=128197
Summary
WK: Cannot select text inside clickable containers.
Enrica Casucci
Reported
2014-02-04 11:16:04 PST
Open www.repubblica.it and navigate to a page that has comments at the bottom. Tap and hold to select text in a comment. Expected The text is selected. Actual Nothing happens. <
rdar://problem/15970890
>
Attachments
Patch
(2.99 KB, patch)
2014-02-04 11:24 PST
,
Enrica Casucci
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-04 11:24:57 PST
Created
attachment 223145
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-02-04 11:28:30 PST
Comment on
attachment 223145
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=223145&action=review
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:846 > + info.url = linkElement->document().completeURL(stripLeadingAndTrailingHTMLSpaces(linkElement->getAttribute(HTMLNames::hrefAttr))); > + } else if (element->isLink()) { > info.url = element->document().completeURL(stripLeadingAndTrailingHTMLSpaces(element->getAttribute(HTMLNames::hrefAttr))); > + elementIsLinkOrImage = true;
Would be slightly nice to factor this so you only call completeURL() once.
> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:852 > + } > + if (!elementIsLinkOrImage) {
I would prefer a blank line between these two.
Enrica Casucci
Comment 3
2014-02-04 13:33:59 PST
Thanks for the review. I've followed your suggestion and factored out CompleteURL.
Enrica Casucci
Comment 4
2014-02-04 13:35:38 PST
Committed revision 163400.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug